force-app/main/default/objects/Opportunity/fields/Actual_Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Check_Out_Date__c</fullName>
    <label>Actual Check Out Date</label>
    <type>DateTime</type>
</CustomField>