force-app/main/default/objects/Opportunity/fields/Alcohol_Served__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Served__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alcohol Served</label>
    <type>Checkbox</type>
</CustomField>