force-app/main/default/objects/Opportunity/fields/Dissaticfaction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dissaticfaction_Reason__c</fullName>
    <label>Dissaticfaction Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>