force-app/main/default/objects/Opportunity/fields/Early_Checkout_Reason__c.field-meta.xml
<CustomField>
    <fullName>Early_Checkout_Reason__c</fullName>
    <label>Early Checkout Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>