force-app/main/default/objects/Opportunity/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <label>Number of Guests</label>
    <summaryForeignKey>Opp_Guest_Intermediate__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>