force-app/main/default/objects/Opportunity/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Ad</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Personal Recommendation</fullName>
            </value>
            <value>
                <fullName>Tour Guide/Agency</fullName>
            </value>
            <value>
                <fullName>Booking.com</fullName>
            </value>
            <value>
                <fullName>Hotels.com</fullName>
            </value>
            <value>
                <fullName>Agoda.com</fullName>
            </value>
            <value>
                <fullName>Trivago</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>