force-app/main/default/objects/Opportunity/fields/Overnight_Event__c.field-meta.xml
<CustomField>
    <fullName>Overnight_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overnight Event</label>
    <type>Checkbox</type>
</CustomField>