force-app/main/default/objects/Opportunity/fields/Payment_Detail_No__c.field-meta.xml
<CustomField>
    <fullName>Payment_Detail_No__c</fullName>
    <label>Payment Detail No</label>
    <type>AutoNumber</type>
</CustomField>