force-app/main/default/objects/Opportunity/fields/payment_done__c.field-meta.xml
<CustomField>
    <fullName>payment_done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>payment done</label>
    <type>Checkbox</type>
</CustomField>