force-app/main/default/objects/Opportunity/fields/Reception_Desk_Officer__c.field-meta.xml
<CustomField>
    <fullName>Reception_Desk_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reception Desk Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>