force-app/main/default/objects/Opportunity/fields/Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Satisfied__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Satisfied</label>
    <type>Checkbox</type>
</CustomField>