force-app/main/default/objects/Opportunity/fields/Total_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Amount__c</fullName>
    <formula>Amount     -       Total_Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>