force-app/main/default/objects/Opportunity/fields/Underage_People_Expected__c.field-meta.xml
<CustomField>
    <fullName>Underage_People_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Underage People  Expected</label>
    <type>Checkbox</type>
</CustomField>