force-app/main/default/objects/Opportunity/recordTypes/Individual_guest.recordType-meta.xml
<RecordType>
    <fullName>Individual_guest</fullName>
    <active>true</active>
    <businessProcess>Individual guest</businessProcess>
    <label>Individual guest</label>
</RecordType>