force-app/main/default/objects/Opportunity/validationRules/Dissatisfaction_Reason_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Dissatisfaction_Reason_Validation</fullName>
    <active>true</active>
    <description>enter e resason for dısccrıbtıon</description>
    <errorConditionFormula>Satisfied__c  = FALSE
 &amp;&amp; 


 ISBLANK(Dissaticfaction_Reason__c )</errorConditionFormula>
    <errorDisplayField>Dissaticfaction_Reason__c</errorDisplayField>
    <errorMessage>Please write a reason for dissatisfaction</errorMessage>
</ValidationRule>