force-app/main/default/objects/Opportunity/validationRules/Early_Checkout_Reason_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Early_Checkout_Reason_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>(Actual_Check_Out_Date__c &lt; Planned_Check_Out_Date__c )
&amp;&amp;
ISBLANK(Early_Checkout_Reason__c )</errorConditionFormula>
    <errorDisplayField>Early_Checkout_Reason__c</errorDisplayField>
    <errorMessage>Please write a reason for early checkout</errorMessage>
</ValidationRule>